added some style

--- a/views/todos.ejs
+++ b/views/todos.ejs
@@ -22,7 +22,7 @@
 
     <form action="/todos/createTodo" method='POST'>
         <input type="text" placeholder="Enter Todo Item" name='todoItem'>
-        <input type="submit">
+        <input class="submitBtn" type="submit">
     </form>
 
     <script src="js/main.js"></script>
