--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,7 +4,16 @@ h1{
 .completed{
     text-decoration: line-through;
     color: gray;
+    cursor: pointer;
 }
 .not{
     text-decoration: underline;
+}
+
+.todoItem{
+    cursor: pointer;
+}
+
+.submitBtn{
+    cursor: pointer;
 }
